ui.frontend/src/main/webpack/components/image-collage/image-collage.scss
.cmp-image-collage {
    .cmp-container {
        display: grid;
        grid-template-areas:
            "image1 image2"
            "image1 image3";
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: 1fr 1fr;
        // @include media('>=576px', '<=992px') {
        //     grid-auto-rows: 185px 185px;
        // }
        .image:nth-child(1) {
            grid-area: image1;
        }
        .image {
            height: 100%;
            .cmp-image {
                height: inherit;
                img {
                    height: 100%;
                    width: 100%;
                    object-fit: cover;
                    display: block;
                }
            }
        }
    }
}

.cmp-image-collage--left-large {
    &.cmp-image-collage--border-top-left {
        .cmp-container {
            .image:nth-child(1) {
                img {
                    @include border-top-left-radius();
                }
            }
        }
    }

    &.primaryLeft-right-col-multi-radius {
        .cmp-container {
            .image:nth-child(2) {
                img {
                    @include border-bottom-right-radius();
                }
            }
            .image:nth-child(3) {
                img {
                    @include border-top-right-radius;
                }
            }
        }
    } 

    &.primaryTop-multi-corner-radius {
        .cmp-container {
            grid-template-areas: 
            "image1 image1"
            "image2 image3";

            .image:nth-child(2) {
                img {
                    @include border-bottom-right-radius();
                }
            }
            .image:nth-child(3) {
                img {
                    @include border-bottom-left-radius();
                }
            }            
        };
    }

    &.primaryBottom-multi-corner-radius {
        .cmp-container {

            grid-template-areas: 
            "image2 image3"            
            "image1 image1";

            .image:nth-child(2) {
                img {
                    @include border-top-right-radius();
                }
            }
            .image:nth-child(3) {
                img {
                    @include border-top-left-radius();
                }
            }            
        };
    }       
}

.cmp-image-collage--right-large {
    .cmp-container {
        grid-template-areas:
        "image2 image1"
        "image3 image1";
        .image:nth-child(1) {
            grid-area: image1;
        }
    }

    &.cmp-image-collage--border-top-left {
        .cmp-container {
            .image:nth-child(2) {
                img {
                    @include border-top-left-radius();
                }
            }
        }
    }

    &.cmp-image-collage--border-multiple {
        .cmp-container {
            .image:nth-child(2) {
                img {
                    @include border-bottom-left-radius();
                }
            }
            .image:nth-child(3) {
                img {
                    @include border-top-left-radius();
                }
            }
        }
    }

    &.primaryRight-left-col-multi-radius {
        .cmp-container {
            .image:nth-child(2) {
                img {
                    @include border-bottom-left-radius();
                }
            }
            .image:nth-child(3) {
                img {
                    @include border-top-left-radius;
                }
            }
        }
    }     
}

